sln: add semisln to 1

--- a/hw02.tex
+++ b/hw02.tex
@@ -127,12 +127,31 @@
     \end{lstlisting}
     Числа выбраны так, что переполнения не происходит. Докажите методом потенциалов, что суммарное время
     работы будет $\O(n + m)$.
+    \begin{solution}
+      Имеем битовый массив, к которому выполняются $m$ запросов с истинными стоимостями $c_1, c_2, \ldots, c_m$. Заведем множество состояний $\{S_0, S_1, \ldots, S_m\}$ массива после запроса с номером $i$. Введем учетные стоимости
+      \begin{equation}
+        \tilde{c_i} = c_i + \varphi(S_i) - \varphi(S_{i-1}),
+      \end{equation}
+      где $\varphi$ -- потенциал, зададим как число единиц в битовом представлении исходного числа:
+      \begin{equation}
+        \varphi = \sum_{i = 0}^{n - 1} a[i].
+      \end{equation}
+      В самом начале потенциал нулевой, так как в битовом представлении все нули. До числа, заданного в условии, можно дойти за конечное число шагов (прибавлений единиц).
+
+      Хочу дойти до следующего:
+      \begin{equation}
+        \sum_{i = 1}^{m} c_i = \sum_{i = 1}^{m} \tilde{c_i} - \Delta \varphi \leq \sum_{i = 1}^{m} \tilde{c_i} \leq m \cdot \O(f(n)) = \O(n + m).
+      \end{equation}
+    \end{solution}
 
   \item
     Вам дан массив из $n$ элементов и
     список из $m$ запросов $add(x, l, r)$: прибавить $x$ к каждому
     элементу на отрезке $[l, r]$. За $\O(n + m)$ выведите массив,
     получающийся из исходного после выполнения заданных запросов.
+    % \begin{solution}
+      
+    % \end{solution}
 
   \item
     Дано число, представленное $n$ цифрами в $d$-ичной записи без
@@ -148,19 +167,19 @@
     Дан массив целых чисел длины $n$. Найдите подотрезок длины
     от $L$ до $R$ с максимальной суммой. $\O(n)$.
 
-  \item \onlygroup{Мишунина}
-    Дан массив длины $n$ с целыми числами $a_i$, $-n \leq a_i \leq n$.
-    Найдите подотрезок с максимальной суммой, длины от $L$ до $R$,
-    содержащий от $A$ до $B$ различных чисел, за $\O(n)$.
+  % \item \onlygroup{Мишунина}
+  %   Дан массив длины $n$ с целыми числами $a_i$, $-n \leq a_i \leq n$.
+  %   Найдите подотрезок с максимальной суммой, длины от $L$ до $R$,
+  %   содержащий от $A$ до $B$ различных чисел, за $\O(n)$.
     
-  \item \exceptgroup{Мишунина}
-    Дана последовательность $a_1, a_2, \cdots, a_n \in \mathbb{N}$.
-    \begin{enumerate}
-    	\item За $\O(n)$ для каждого $a_i$ найти самый правый из элементов, которые левее и меньше его.
-    	\item За $\O(n)$ для каждого $a_i$ найти самый левый из элементов, которые правее и меньше его.
-    	\item За $\O(n)$ найти $l, r$ ($1 \leq l \leq r \leq n$) такие, что значение $(r - l + 1) \min_{i \in [l, r]} a_i$ было бы максимально.
-    	\item За $\O(n)$ найти $l, r$ ($1 \leq l \leq r \leq n$) такие, что значение $\left(\sum_{i \in [l, r]} a_i \right) \min_{i \in [l, r]} a_i$ было бы максимально.
-    \end{enumerate}
+  % \item \exceptgroup{Мишунина}
+  %   Дана последовательность $a_1, a_2, \cdots, a_n \in \mathbb{N}$.
+  %   \begin{enumerate}
+  %   	\item За $\O(n)$ для каждого $a_i$ найти самый правый из элементов, которые левее и меньше его.
+  %   	\item За $\O(n)$ для каждого $a_i$ найти самый левый из элементов, которые правее и меньше его.
+  %   	\item За $\O(n)$ найти $l, r$ ($1 \leq l \leq r \leq n$) такие, что значение $(r - l + 1) \min_{i \in [l, r]} a_i$ было бы максимально.
+  %   	\item За $\O(n)$ найти $l, r$ ($1 \leq l \leq r \leq n$) такие, что значение $\left(\sum_{i \in [l, r]} a_i \right) \min_{i \in [l, r]} a_i$ было бы максимально.
+  %   \end{enumerate}
 
 % \subsection*{Дополнительные задачи}
 
