sln: add sln to 3

--- a/hw02.tex
+++ b/hw02.tex
@@ -136,9 +136,9 @@
       \begin{equation}
         \varphi = \sum_{i = 0}^{n - 1} a[i].
       \end{equation}
-      В самом начале потенциал нулевой, так как в битовом представлении все нули. До числа, заданного в условии, можно дойти за конечное число шагов (прибавлений единиц).
+      Можем сказать, что в самом начале потенциал нулевой, так как в битовом представлении числа 0 все нули. До числа, заданного в условии, можно дойти за конечное число шагов (прибавлений единиц).
 
-      Хочу дойти до следующего:
+      Хочу (но не знаю, как) дойти до следующего:
       \begin{equation}
         \sum_{i = 1}^{m} c_i = \sum_{i = 1}^{m} \tilde{c_i} - \Delta \varphi \leq \sum_{i = 1}^{m} \tilde{c_i} \leq m \cdot \O(f(n)) = \O(n + m).
       \end{equation}
@@ -149,14 +149,26 @@
     список из $m$ запросов $add(x, l, r)$: прибавить $x$ к каждому
     элементу на отрезке $[l, r]$. За $\O(n + m)$ выведите массив,
     получающийся из исходного после выполнения заданных запросов.
-    % \begin{solution}
-      
-    % \end{solution}
+    \begin{solution}
+      Предпосчитаем префиксные суммы за $\O(n)$:
+      \begin{equation}
+        S_0, S_1, \ldots, S_{n-1}.
+      \end{equation}
+      Сумма элементов массива из отрезка $[l, r]$ представляет собой разность $S_r - S_{l - 1}$.
+    \end{solution}
 
   \item
     Дано число, представленное $n$ цифрами в $d$-ичной записи без
     ведущих нулей.  Из числа требуется вычеркнуть ровно $k$ цифр так,
     чтобы результат был максимальным. $\O(n)$, $d$ и $k$ --- не константы.
+    \begin{solution}
+      Предполагается, что мы умеем сравнивать цифры в $d$-ичной системе счисления. Предлагаю следующую реализацию: заведем стек; пройдем по всем цифрам исходного числа -- от старшего разряда к младшему. Если текущий элемент больше верхнего элемента стека, то складываем его на стек, а если меньше либо равен, то достаем верхний элемент из стека и кладем туда текущий. После прохода по всем $n$ цифрам исходного числа в стеке лежат $k'$ элементов.
+      \begin{itemize}
+        \item Если $k' = k$, то задача решена, нужно вывести исходное число, удаляя из него элементы, сохраненные на стеке.
+        \item Если $k' > k$, то нужно удалять элементы из стека, пока количество элементов на стеке не будет равным $k$.
+        \item Если $k' < k$, то нужно вычеркнуть $k - k'$ цифр исходного числа с конца.
+      \end{itemize}
+    \end{solution}
     
   \item \onlygroup{Мишунина}
     Вам дана строка из трёх типов скобок. Найдите самую длинную ее
