sln: add sln to 5

--- a/hw02.tex
+++ b/hw02.tex
@@ -178,6 +178,16 @@
   \item
     Дан массив целых чисел длины $n$. Найдите подотрезок длины
     от $L$ до $R$ с максимальной суммой. $\O(n)$.
+    \begin{solution}
+      Для решения данной задачи заведем две переменных и два указателя. Переменная $s_{cur}$ отвечает за сумму на текущем подмассиве. Переменная $s_{max}$ отвечает за сумму, которая на данный момент считается максимальной. Указатели $l = 0, r = 0$ -- указывают на левую и правую границы подмассива соответственно.
+
+      Изначально $s_{cur} = s_{max} = 0$. Если $n = 0$, то возвращаем $s_{max} = 0$, иначе проходим по массиву (на каждом шаге увеличиваем $r$ на 1). На каждом шаге складываем текущую сумму $s_{cur}$ с очередным элементом массива $a[r]$ и сравниваем с максимально известной $s_{max}$:
+      \begin{itemize}
+        \item Если $s_{cur} \geq s_{max}$, то обновляем максимальную сумму.
+        \item Если $s_{cur} < 0$, то не имеет смысла держать все то, что было левее, поэтому обновляем левую границу: $l = (r + 1)$. А также ставим нулевую текущую сумму $s_{cur} = 0$.
+      \end{itemize}
+      В конце выводим границы требуемого подмассива $l, r$. Максимальная сумма тоже известна.
+    \end{solution}
 
   % \item \onlygroup{Мишунина}
   %   Дан массив длины $n$ с целыми числами $a_i$, $-n \leq a_i \leq n$.
