feat: add new potential function in 1

--- a/hw02.tex
+++ b/hw02.tex
@@ -132,9 +132,9 @@
       \begin{equation}
         \tilde{c_i} = c_i + \varphi(S_i) - \varphi(S_{i-1}),
       \end{equation}
-      где $\varphi$ -- потенциал, зададим как число единиц в битовом представлении исходного числа:
+      где $\varphi$ -- потенциал, зададим как число единиц в битовом представлении исходного числа до первого встретившегося нуля:
       \begin{equation}
-        \varphi = \sum_{i = 0}^{n - 1} a[i].
+        \varphi = \sum_{i = 0\, \&\&\, a[i] \neq 0}^{n - 1} a[i].
       \end{equation}
       Можем сказать, что в самом начале потенциал нулевой, так как в битовом представлении числа 0 все нули. До числа, заданного в условии, можно дойти за конечное число шагов (прибавлений единиц).
 
@@ -150,11 +150,9 @@
     элементу на отрезке $[l, r]$. За $\O(n + m)$ выведите массив,
     получающийся из исходного после выполнения заданных запросов.
     \begin{solution}
-      Предпосчитаем префиксные суммы за $\O(n)$:
-      \begin{equation}
-        S_0, S_1, \ldots, S_{n-1}.
-      \end{equation}
-      Сумма элементов массива из отрезка $[l, r]$ представляет собой разность $S_r - S_{l - 1}$.
+      Представим исходный массив в виде бинарного дерева. Один лист -- это один элемент массива. Из каждой пары листьев сделаем родителя, который будет содержать в себе сумму значений в детях. Если $n$ нечетное, то последний лист сразу будет идти в родителя.
+      
+      При такой структуре будут быстро происходить запросы $add(x, l, r)$, потому что каждая нода имеет свой номер, каждый родитель будет по сути представлять собой какой-нибудь подмассив, содержащий в себе определенное число конечных листьев, и операции поиска и суммирования будут совершаться за $\O(1)$. После $m$ запросов нужно вывести преобразованный массив из $n$ элементов. Суммарное время работы будет $\O(n + m)$.
     \end{solution}
 
   \item
