sln: add sln to 2

--- a/hw03.tex
+++ b/hw03.tex
@@ -121,6 +121,16 @@
 	(не более одной в стойло) так, чтобы минимальное расстояние между коровами было максимально.
 	$\O(m (\log{m} + \log{x_{\max}}))$.
 
+	\begin{solution}
+		Имея последовательность стойл $x_1, \ldots, x_m$, отсортируем ее за $\O(m \log m)$, например, сортировкой слиянием. Если $n > m$, то задача смысла не имеет, поэтому будем считать, что $n \leq m$. Чтобы решить задачу будем действовать следующим образом: первую корову поставим в первое стойло, а дальше будем максимизировать минимальное расстояние $\delta$ бинарным поиском.
+		
+		Если нам дано какое-то фиксированное число $\delta$, то мы можем однозначно сказать, получится ли с таким числом расставить $n$ коров. Мы последовательно идем по оставшемуся массиву и смотрим разницу между текущим положением и положением последней коровы. Если такая разность меньше заданного $\delta$, то идем дальше, иначе запоминаем новое положение последней коровы и увеличиваем счетчик коров. Дойдя до конца, мы можем сказать, подходит $\delta$ или нет. Если количество коров при заданном $\delta$ оказалось меньше заданного в условии $n$, то такое $\delta$ нам не подходит, иначе -- подходит, или, что то же самое, это означает, что мы смогли расставить нужное число коров с заданным $\delta$.
+
+		По сути, алгоритм такой: ставим корову в первое стойло, потом запускаем бинпоиск, который будет нам давать конкретные значения $\delta$. Как описано выше, мы можем решать, подходит нам очередное $\delta$ или нет. Если подходит, то сдвигаем левую границу бинпоиска, иначе -- правую.
+
+		В таком алгоритме мы изначально остортировали массив за $\O(m \log m)$, а потом искали максимальную минимальную $\delta$ за $\O(m \log{x_{\max}})$ (проверяли за линию на логарифмически уменьшающихся подмассивах). Итоговое время работы: $\O(m (\log{m} + \log{x_{\max}}))$.
+	\end{solution}
+
   \item
     Докажите, что для поиска максимума в массиве различных чисел потребуется
 	как минимум $n-1$ сравнение.
