sln: add sln to 2

--- a/hw03.tex
+++ b/hw03.tex
@@ -153,6 +153,10 @@
   \item
     Докажите, что для поиска максимума в массиве различных чисел потребуется
 	как минимум $n-1$ сравнение.
+	\begin{solution}
+		Как я понимаю, фраза про минимум сравнений отсылает нас к идеальному случаю. То есть, даже если нам кто-то сказал, что вот этот конкретный массив в каком-то смысле идеальный с точки зрения поиска максимума, то нам все равно потребуется $n - 1$ сравнение, чтобы найти в нем максимум. Мы не знаем, как устроен этот самый массив, поэтому будем идти по нему линейно и запоминать максимальный элемент. Понятно, что идеальный случай -- это уже отсортированный массив. Понятно, что, если мы начинаем с начала (или с конца, все равно минимальное число сравнений не изменится), то нам надо сравнить первый элемент со вторым, понять, что второй больше, его запомнить, сравнить его с третьим и так далее. Всего потребуется непосредственно $n - 1$ сравнение, чтобы определить максимум.
+	\end{solution}
+	
 
   \item
 	Найти второй максимум в массиве за $n + \O(\log n)$ сравнений.	
