sln: add sln to 2

--- a/hw03.tex
+++ b/hw03.tex
@@ -159,7 +159,14 @@
 	
 
   \item
-	Найти второй максимум в массиве за $n + \O(\log n)$ сравнений.	
+	Найти второй максимум в массиве за $n + \O(\log n)$ сравнений.
+	\begin{solution}
+		Предположим, что данный нам массив четной длины. Если это не так, то допишем ему в конец $-\infty$ за $\O(1)$. Тогда, проходя по массиву (здесь уже с шагом 2, потому что планируем сравнивать пары), будем его немного модифицировать, а именно: сравниваем два элемента и бОльший ставим на четное место. При таком проходе сделали $n/2$ сравнений. При следующем проходе будем сравнивать бОльшие элементы из пар и ставить их на позиции, кратные 4. В таком случае шаг уже 4, и сделаем мы $n/4$ сравнений. И так пока не остался один элемент, который будет максимальным. Всего сделали
+		\begin{equation}
+			n/2 + n/4 + \ldots + 1 = n
+		\end{equation}
+		сравнений. А теперь просят выбрать второй по величине за $\O(\log n)$. Это можно сделать бинпоиском по тем элементам, индексы которых можно восстановить, с которыми сравнивался максимальный элемент.
+	\end{solution}
 
   \item
 	Структура данных <<файл последовательного доступа>>
