fix: correct sln to 2

--- a/hw02.tex
+++ b/hw02.tex
@@ -150,9 +150,36 @@
     элементу на отрезке $[l, r]$. За $\O(n + m)$ выведите массив,
     получающийся из исходного после выполнения заданных запросов.
     \begin{solution}
-      Представим исходный массив в виде бинарного дерева. Один лист -- это один элемент массива. Из каждой пары листьев сделаем родителя, который будет содержать в себе сумму значений в детях. Если $n$ нечетное, то последний лист сразу будет идти в родителя.
-      
-      При такой структуре будут быстро происходить запросы $add(x, l, r)$, потому что каждая нода имеет свой номер, каждый родитель будет по сути представлять собой какой-нибудь подмассив, содержащий в себе определенное число конечных листьев, и операции поиска и суммирования будут совершаться за $\O(1)$. После $m$ запросов нужно вывести преобразованный массив из $n$ элементов. Суммарное время работы будет $\O(n + m)$.
+      Представим исходный массив в виде другого массива, на котором заданная операция $add(x, l, r)$ будет выполняться за $\O(1)$. Для этого подходит разностный массив, который строится по формуле
+      \begin{equation}
+        \begin{cases}
+          d[i] = a[i] - a[i-1], \quad i \in (0, n) \\
+          d[0] = a[0]
+        \end{cases}
+      \end{equation}
+      Если нам нужно прибавить $x$ на отрезке $[l, r]$, то в случае разностного массива нам нужно увеличить только значение $d[l]$ на $x$ (потому что $d[l] = a[l] - a[l-1] \to (a[l] + x) - a[l-1] = d[l] + x$) и уменьшить значение $d[r+1]$ на $x$ (потому что $d[r+1] = a[r+1] - a[r] \to a[r+1] - (a[r] + x) = d[r+1] - x$). Промежуточные значения не изменятся, потому что при добавлении $x$ к соседним получаем те же соседние элементы:
+      \begin{equation}
+          a[i] - a[i-1] = d[i] = (a[i] + x)  - (a[i-1] + x) = a[i] - a[i-1]
+      \end{equation}
+      Получается, что запрос $add(x, l, r)$ можно выполнить за $\O(1)$ на разностном массиве $d$ путем выполнения двух операций:
+      \begin{equation}
+        \begin{cases}
+          d[l] = d[l] + x, \\
+          d[r+1] = d[r+1] - x.
+        \end{cases}
+      \end{equation}
+      При этом, если $r+1 \geq n$ (нумерация: $0,1,\ldots,n-1$), то значение нужно будет менять только в $d[l]$.
+      После выполнения $m$ операций над разностным массивом можно восстановить исходный (но уже преобразованный массив) следующим образом:
+      \begin{equation}
+        \begin{cases}
+          a[0] = d[0], \\
+          a[i] = a[i-1] + d[i],\quad i \in (0, n).
+        \end{cases}
+      \end{equation}
+      Общее время работы такой схемы складывается из построения разностного массива ($\O(n)$), выполнения $m$ запросов $add(x, l, r)$ ($m\cdot\O(1) = \O(m)$), восстановления и вывода преобразованного массива ($\O(n)$):
+      \begin{equation}
+        \O(n) + \O(m) + \O(n) = \O(n+m).
+      \end{equation}
     \end{solution}
 
   \item
