--- a/hw03.tex
+++ b/hw03.tex
@@ -156,18 +156,22 @@
     Докажите, что для поиска максимума в массиве различных чисел потребуется
 	как минимум $n-1$ сравнение.
 	\begin{solution}
-		Как я понимаю, фраза про минимум сравнений отсылает нас к идеальному случаю. То есть, даже если нам кто-то сказал, что вот этот конкретный массив в каком-то смысле идеальный с точки зрения поиска максимума, то нам все равно потребуется $n - 1$ сравнение, чтобы найти в нем максимум. Мы не знаем, как устроен этот самый массив, поэтому будем идти по нему линейно и запоминать максимальный элемент. Понятно, что идеальный случай -- это уже отсортированный массив. Понятно, что, если мы начинаем с начала (или с конца, все равно минимальное число сравнений не изменится), то нам надо сравнить первый элемент со вторым, понять, что второй больше, его запомнить, сравнить его с третьим и так далее. Всего потребуется непосредственно $n - 1$ сравнение, чтобы определить максимум.
+		Будем проходить по массиву (через один элемент с шагом 2) и его немного модифицировать, а именно: сравниваем два элемента и бОльший ставим на четное место с помощью swap. При таком проходе сделали $\lfloor n/2 \rfloor$ сравнений и получили информацию о $\lfloor n/2 \rfloor$ претендентах на звание максимального элемента. Теперь снова будем проходить (через три элемента с шагом 4) по массиву и сравнивать бОльшие элементы из пар и ставить их на позиции, кратные 4. В таком случае мы сделаем $\lfloor n/4 \rfloor$ сравнений. И так пока не останется один элемент, который будет стоять самым первым элементом массива и будет максимальным. Всего сделали
+		\begin{equation}
+			\lfloor n/2 \rfloor + \lfloor n/4 \rfloor + \ldots + 1 = n - 1
+		\end{equation}
+		сравнений. Заметим, что такие вычисления могут немного ломаться, если массив нечетной длины. На самом деле, ничего не ломается. Если массив нечетный, то индекс последнего элемента четный, потому что нумерация начинается с нуля. Поэтому при первом проходе последний элемент просто не будет ни с чем сравниваться, а уже будет стоять претендентом на сравнения в четверках и так далее.
 	\end{solution}
 	
 
   \item
 	Найти второй максимум в массиве за $n + \O(\log n)$ сравнений.
 	\begin{solution}
-		Предположим, что данный нам массив четной длины. Если это не так, то допишем ему в конец $-\infty$ за $\O(1)$. Тогда, проходя по массиву (здесь уже с шагом 2, потому что планируем сравнивать пары), будем его немного модифицировать, а именно: сравниваем два элемента и бОльший ставим на четное место. При таком проходе сделали $n/2$ сравнений. При следующем проходе будем сравнивать бОльшие элементы из пар и ставить их на позиции, кратные 4. В таком случае шаг уже 4, и сделаем мы $n/4$ сравнений. И так пока не остался один элемент, который будет максимальным. Всего сделали
+		Для начала нужно выполнить все те шаги, которые были описаны в предыдущей задаче. После выполнения шагов в нашем массиве максимальный элемент стоит на нулевой позиции. Так как он максимальный, это значит, что он победил во всех попарных сравнениях с другими претендентами. Чтобы найти второй максимум, можно пройтись по тем позициям, на которых стояли те элементы, с которыми сравнивался максимум. Так как мы дробили каждый раз пополам, то нужно пройтись по индексам
 		\begin{equation}
-			n/2 + n/4 + \ldots + 1 = n
+			n/{2^i}, n/{2^{i-1}}, \ldots
 		\end{equation}
-		сравнений. А теперь просят выбрать второй по величине за $\O(\log n)$. Это можно сделать бинпоиском по тем элементам, индексы которых можно восстановить, с которыми сравнивался максимальный элемент.
+		Здесь $i$ известна из процесса поиска первого максимума, $i$ можно было запоминать.
 	\end{solution}
 
   \item
