--- a/hw03.tex
+++ b/hw03.tex
@@ -128,11 +128,7 @@
 		\end{equation}
 		Для всех довольно адекватных входных данных $n \leq 2^{65536}$ нам достаточно $m=5$ итераций применения двоичного логарифма, чтобы свести задачу размера $n$ к 1, поэтому
 		\begin{equation}
-			T(n) = 2^5 \cdot 1 + 5 \cdot 2^{\log^* n} \leq 2^5 \cdot 1 + 5 \cdot 6 = \O(1).
-		\end{equation}
-		Честно говоря, не знаю, насколько валидно вообще такие преобразования делать, но, думаю, можно оставить, например, вот так:
-		\begin{equation}
-			T(n) = \O(2^{\log \log \log \log \log n}).
+			T(n) = 2^5 \cdot 1 + 5 \cdot 2^{\log^* n} = \O(2^{\log^* }).
 		\end{equation}
 	\end{solution}
 
