--- a/algo_template.tex
+++ b/algo_template.tex
@@ -16,6 +16,7 @@
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 \usepackage{indentfirst}
 \graphicspath{{images/}}
+\usetikzlibrary{graphs}
 
 \newtheorem{problem}{Задача}
 
@@ -85,6 +86,7 @@
   \input{head.tex}
   % \input{hw01.tex}
   % \input{hw02.tex}
-  \input{hw03.tex}
+  % \input{hw03.tex}
+  \input{hw04.tex}
 
 \end{document}
