sln: add part of sln to 4

--- a/hw04.tex
+++ b/hw04.tex
@@ -266,6 +266,15 @@
       \item \texttt{decrease\_priority(key, new\_priority)} --- уменьшить приоритет ключа \texttt{key} (который в этот момент присутствует в структуре).
     \end{itemize}
     Все ключи --- целые числа от 1 до $n$. Все операции должны работать за детерменированные $\O(\log{n})$.
+    \begin{solution}
+      На практике мы рассмотрели биномиальное дерево. Из биномиальных деревьев разных порядков можно составить биномиальную кучу следующим образом:
+      \begin{itemize}
+        \item Каждое бин. дерево подчиняется свойству минкучи, а именно: приоритет узла не меньше приоритета его родителя.
+        \item В куче может быть не более одного бин. дерева с корнем степени $k$.
+      \end{itemize}
+      
+
+    \end{solution}
 
 % \subsection*{Дополнительные задачи}
 
