sln: add sln to 4

--- a/hw04.tex
+++ b/hw04.tex
@@ -269,11 +269,18 @@
     \begin{solution}
       На практике мы рассмотрели биномиальное дерево. Из биномиальных деревьев разных порядков можно составить биномиальную кучу следующим образом:
       \begin{itemize}
+        \item Биномиальные деревья объединены во множество таким образом, что их корни соединены последовательно друг за другом. Корень самого левого дерева будет иметь минимальную степень, а у последующих деревьев степень будет увеличиваться. 
         \item Каждое бин. дерево подчиняется свойству минкучи, а именно: приоритет узла не меньше приоритета его родителя.
         \item В куче может быть не более одного бин. дерева с корнем степени $k$.
+        \item Каждый узел будет хранить информацию о своем значении, приоритете, родителе, левом ребенке, правом брате и степени.
       \end{itemize}
-      
 
+      Операция \texttt{push(key, priority)} будет соответствовать тому, что мы создадим новую кучу из этого одного узла $(\O(1))$, а потом объединим эту кучу с исходной биномиальной кучей. При слиянии мы будем следить за тем, чтобы выполнялись условия, приведенные выше. Если оказазывается так, что в куче появляются два дерева $B_{k-1}$, то мы смотрим какой из их корней меньше и прикрепляем то дерево, чей корень больше к дереву, чем корень меньше, получаем $B_{k-1}$. Делаем такую процедуру пока в куче не останется деревьев с одинаковой степенью. Если представить корни двух складываемых вершин в виде двоичного числа, где каждый бит будет соответствовать тому, есть ли вершина с такой степенью или нет, то слияние двух куч будет соответствовать сложение двух двоичных чисел. Время такого сложения пропорционально числу корневых вершин ($\Omega(\log{n})$). При \texttt{push(key, priority)} мы будем сливать исходную кучу с кучей, состоящей из одного дерева, которое состоит из одного элемента, поэтому время такой операции -- $\O(\log{n})$.
+
+      Операция \texttt{pop()} сначала будет искать бин. дерево с минимальным корневым значением с помощью бин. поиска за $\Theta(\log{n})$. Найдя нужный корень, удалим его за $\O(1)$, но потом из его детей образовалась новая куча за $\Theta(\log{n})$, которую нужно слить с исходной за $\Omega(\log{n})$. В итоге время работы такой операции $\O(\log{n})$.
+
+      Операция \texttt{decrease\_priority(key, new\_priority)} соответствует тому, что элемент будет всплывать как в обычной куче. На лекции показывали, что такая процедура работает за $\O(\log{n})$, так как глубина текущей вершины в худшем случае $\O(\log{n})$.
+      
     \end{solution}
 
 % \subsection*{Дополнительные задачи}
