sln: add sln to 1

--- a/hw04.tex
+++ b/hw04.tex
@@ -157,10 +157,22 @@
 
   \begin{enumerate}
      \item Отсортируйте патроны за $\O(nk)$.
+     \begin{solution}
+      Пройдем по исходному массиву и разобьем его на подмассивы длиной не более чем k. Для каждого такого подмассива выполним сортировку вставками. Так как подмассивы почти отсортированы, то будет работать лучший сценарий для сортировки вставками $\O(k)$. Так как мы эту процедуру будем повторять для всех $n$, то время работы такого алгоритма будет $\O(nk)$.
+     \end{solution}
      \item Отсортируйте патроны за $\O(n + I)$, 
       где $I$ --- число инверсий.
+     \begin{solution}
+      Тоже будем использовать алгоритм сортировки вставками. Так как в процессе работы алгоритма меняются местами только соседние элементы, то совокупное число инверсий при каждом свапе уменьшается на 1. Поэтому количество обменов совпадает с числом инверсий в исходном массиве. Такой алгоритм будет работать за $\O(n + I)$.
+     \end{solution}
      \item Докажите нижнюю оценку на время сортировки $\Omega(n \log k)$.
+     \begin{solution}
+      Ну, любой алгоритм сортировки, основанный на сравнениях будет иметь такую нижнюю оценку. А раз этот алгоритм работает на сравнениях, то он работает за $\Omega(n \log k)$.
+     \end{solution}
      \item Отсортируйте патроны за $\O(n \log k)$.
+     \begin{solution}
+      Вместо линейного поиска позиции будем использовать бинарный поиск, поэтому, пройдясь по каждому из $n$ элементов мы будем искать для него позицию за $\O(\log k)$. Тогда суммарное время работы алгоритма будет $\O(n \log k)$.
+     \end{solution}
   \end{enumerate}
 
   \item
