sln: add sln to 2 (a)

--- a/hw04.tex
+++ b/hw04.tex
@@ -189,6 +189,43 @@
     \begin{enumerate}
       \item Докажите, что каждое неотрицательное целое число имеет
         единственное возможное представление в скошенной системе счисления.
+      \begin{solution}
+        Предположим, что это не так, тогда для конкретного неотрицательного целого числа, которое записывается по формуле
+        \begin{equation}
+          \sum_{i = 1}^k a_i \cdot (2^i - 1)
+        \end{equation}
+        найдутся два различных числа в скошенной системе исчисления:
+        \begin{equation}
+          \begin{cases}
+            \overline{a_k a_{k-1} \cdots a_2 a_1}, \\
+            \overline{a_k' a_{k-1}' \cdots a_2' a_1'}.
+          \end{cases}
+        \end{equation}
+        Так как в десятичной записи число одно и то же, то имеет место следующее равенство:
+        \begin{equation}
+          a_1(2^1-1)+\ldots+a_k(2^k-1) = a_1'(2^1-1)+\ldots+a_k'(2^k-1).
+        \end{equation}
+        Так как значения коэффициентов $\{2^i-1\}$ совпадают слева и справа, можем перенести в левую часть и сгруппировать:
+        \begin{equation}
+          (a_1-a_1')(2^1-1)+\ldots+(a_k-a_k')(2^k-1) = 0.
+        \end{equation}
+        Но числовое значение каждой из скобок $\{2^i-1\}, i \in [1, k]$ положительно, поэтому равенство нулю может достигаться тогда и только тогда, когда разности параметров $a_i$ и $a_i'$ равны нулям:
+        \begin{equation}
+          \begin{cases}
+            a_1=a_1',\\
+            \ldots\\
+            a_k=a_k'.
+          \end{cases}
+        \end{equation}
+        Поэтому на самом деле в исходном предположении числа
+        \begin{equation}
+          \begin{cases}
+            \overline{a_k a_{k-1} \cdots a_2 a_1}, \\
+            \overline{a_k' a_{k-1}' \cdots a_2' a_1'}
+          \end{cases}
+        \end{equation}
+        совпадают, что означает, что мы не можем найти два представления одного числа в скошенной системе исчисления.
+      \end{solution}
       \item Придумайте, как увеличить число в скошенной системе на
         единицу за $\O(1)$.
     \end{enumerate}
